--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="styles/style.css">
 		<title>HomeWork HTML/CSS</title>
 	</head>
@@ -71,6 +72,38 @@
 				</div>
 				<div class="side">
 					<p>NEWS</p>
+				</div>
+			</div>
+			<div class="main">
+				<div class="mainside">
+					<div>
+						<p>Tops at the Box Office</p>
+					</div>
+					<div>
+						<p>Opening This Week</p>
+					</div>
+					<div>
+						<p>New on DVD/Blu-ray</p>
+					</div>
+				</div>
+				<div class="middlemain">
+					<div class="bignews">
+						<p>News</p>
+					</div>
+					<div class="ad">
+						<p>ADVERTISEMENT</p>
+					</div>
+				</div>
+				<div class="mainside">
+					<div>
+						<p>Photo Gallery</p>
+					</div>
+					<div>
+						<p>Birthdays</p>
+					</div>
+					<div>
+						<p>Trivia</p>
+					</div>
 				</div>
 			</div>
 		</main>
