--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<body>
 		<header>
 			<div class="top">
-				<div class="side">
-					<p>ADVERTISEMENT</p>
+				<div class="side whitebox">
+					<span>ADVERTISEMENT</span>
 				</div>
 				<div class="middletop">
-					<div class="logo">
+					<div class="logo whitebox">
 						<p>IMDbLOGO</p>
 					</div>
 					<div class="topnav">
@@ -28,7 +28,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="side">
+				<div class="side whitebox">
 					<p>ADVERTISEMENT</p>
 				</div>
 			</div>
@@ -42,7 +42,7 @@
 				</ul>
 			</div>
 			<div class="search">
-				<div>
+				<div class="searchword">
 					<p>Search</p>
 				</div>
 				<div>
@@ -51,7 +51,7 @@
 				<div>
 					<button>GO</button>
 				</div>
-				<div>
+				<div class="advanced">
 					<p>advanced search</p>
 				</div>
 			</div>
@@ -61,47 +61,47 @@
 				<p>Video Spotlight<p>
 			</div>
 			<div class="topmain">
-				<div class="side">
+				<div class="side whitebox">
 					<p>MOVIES</p>
 				</div>
-				<div class="side">
+				<div class="side whitebox">
 					<p>TV</p>
 				</div>
-				<div class="side">
+				<div class="side whitebox">
 					<p>DVD/Blu-ray</p>
 				</div>
-				<div class="side">
+				<div class="side whitebox">
 					<p>NEWS</p>
 				</div>
 			</div>
 			<div class="main">
 				<div class="mainside">
-					<div>
-						<p>Tops at the Box Office</p>
+					<div class="blackbox">
+						<p>Tops at<br>the Box Office</p>
 					</div>
-					<div>
-						<p>Opening This Week</p>
+					<div class="blackbox">
+						<p>Opening<br>This Week</p>
 					</div>
-					<div>
-						<p>New on DVD/Blu-ray</p>
+					<div class="blackbox">
+						<p>New on<br>DVD/Blu-ray</p>
 					</div>
 				</div>
 				<div class="middlemain">
-					<div class="bignews">
+					<div class="bignews blackbox">
 						<p>News</p>
 					</div>
-					<div class="ad">
+					<div class="ad whitebox">
 						<p>ADVERTISEMENT</p>
 					</div>
 				</div>
 				<div class="mainside">
-					<div>
-						<p>Photo Gallery</p>
+					<div class="whitebox">
+						<p>Photo<br>Gallery</p>
 					</div>
-					<div>
+					<div class="blackbox">
 						<p>Birthdays</p>
 					</div>
-					<div>
+					<div class="blackbox">
 						<p>Trivia</p>
 					</div>
 				</div>
